--- a/web/sites/default/config/core.entity_form_display.paragraph.council_agenda_item.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.council_agenda_item.default.yml
@@ -4,7 +4,9 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.council_agenda_item.field_agenda_item_number
-    - field.field.paragraph.council_agenda_item.field_time_certain_optional_
+    - field.field.paragraph.council_agenda_item.field_agenda_item_type
+    - field.field.paragraph.council_agenda_item.field_council_document
+    - field.field.paragraph.council_agenda_item.field_time
     - paragraphs.paragraphs_type.council_agenda_item
   module:
     - time_field
@@ -14,14 +16,32 @@ bundle: council_agenda_item
 mode: default
 content:
   field_agenda_item_number:
-    weight: 0
+    weight: 1
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
-  field_time_certain_optional_:
-    weight: 1
+  field_agenda_item_type:
+    weight: 0
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
+  field_council_document:
+    weight: 3
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
+  field_time:
+    weight: 2
     settings:
       enabled: false
       step: 5
