--- a/web/sites/default/config/core.entity_view_display.node.council_document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.council_document.default.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - field.field.node.council_document.field_body_content
-    - field.field.node.council_document.field_council_docd
     - field.field.node.council_document.field_council_document_status
     - field.field.node.council_document.field_council_document_type
     - field.field.node.council_document.field_documents_and_exhibits
@@ -13,46 +12,45 @@ dependencies:
   module:
     - file
     - link
+    - panelizer
     - text
     - user
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: node.council_document.default
 targetEntityType: node
 bundle: council_document
 mode: default
 content:
   field_body_content:
-    weight: 102
-    label: above
+    weight: 2
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
-  field_council_docd:
-    weight: 103
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_council_document_status:
-    weight: 104
-    label: above
+    weight: 0
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
   field_council_document_type:
-    weight: 101
-    label: above
+    weight: 1
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
   field_documents_and_exhibits:
-    weight: 105
+    weight: 3
     label: above
     settings:
       use_description_as_link_text: true
@@ -60,7 +58,7 @@ content:
     type: file_default
     region: content
   field_efiles_link:
-    weight: 106
+    weight: 4
     label: above
     settings:
       trim_length: 80
@@ -71,9 +69,5 @@ content:
     third_party_settings: {  }
     type: link
     region: content
-  links:
-    weight: 100
-    settings: {  }
-    third_party_settings: {  }
-    region: content
-hidden: {  }
+hidden:
+  links: true
