--- a/web/sites/default/config/core.entity_view_display.paragraph.council_agenda_item.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.council_agenda_item.default.yml
@@ -4,7 +4,9 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.council_agenda_item.field_agenda_item_number
-    - field.field.paragraph.council_agenda_item.field_time_certain_optional_
+    - field.field.paragraph.council_agenda_item.field_agenda_item_type
+    - field.field.paragraph.council_agenda_item.field_council_document
+    - field.field.paragraph.council_agenda_item.field_time
     - paragraphs.paragraphs_type.council_agenda_item
   module:
     - time_field
@@ -22,7 +24,23 @@ content:
     third_party_settings: {  }
     type: number_integer
     region: content
-  field_time_certain_optional_:
+  field_agenda_item_type:
+    weight: 3
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_council_document:
+    weight: 2
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_time:
     weight: 1
     label: above
     settings:
