--- a/web/sites/default/config/field.storage.paragraph.field_agenda_item_type.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_agenda_item_type.yml
@@ -1,13 +1,17 @@
-uuid: c019ddb5-1438-417c-be1d-0d8045e288c8
+uuid: fc61d371-facd-4712-8b58-b25413e6b2c2
 langcode: en
 status: true
 dependencies:
   module:
-    - node
+    - field_permissions
+    - paragraphs
     - taxonomy
-id: node.field_council_docd
-field_name: field_council_docd
-entity_type: node
+third_party_settings:
+  field_permissions:
+    permission_type: public
+id: paragraph.field_agenda_item_type
+field_name: field_agenda_item_type
+entity_type: paragraph
 type: entity_reference
 settings:
   target_type: taxonomy_term
