--- a/web/sites/default/config/taxonomy.vocabulary.agenda_type.yml
+++ b/web/sites/default/config/taxonomy.vocabulary.agenda_type.yml
@@ -2,7 +2,7 @@ uuid: 665944dc-d9f2-4202-8218-a50c5f757658
 langcode: en
 status: true
 dependencies: {  }
-name: 'Agenda Type'
+name: 'Agenda type'
 vid: agenda_type
 description: 'There are several types of council meetings.'
 hierarchy: 0
