--- a/web/sites/default/config/core.entity_view_display.node.council_meeting.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.council_meeting.default.yml
@@ -11,39 +11,61 @@ dependencies:
     - node.type.council_meeting
   module:
     - datetime
+    - ds
+    - panelizer
     - text
     - time_field
     - user
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: node.council_meeting.default
 targetEntityType: node
 bundle: council_meeting
 mode: default
 content:
   field_agenda_type:
-    weight: 104
+    weight: 1
     label: above
     settings:
-      link: true
-    third_party_settings: {  }
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: entity_reference_label
     region: content
   field_council_meeting_status:
-    weight: 105
-    label: above
+    weight: 0
+    label: hidden
     settings:
-      link: true
-    third_party_settings: {  }
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: entity_reference_label
     region: content
   field_notes:
-    weight: 106
+    weight: 4
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_start_date:
-    weight: 102
+    weight: 2
     label: above
     settings:
       format_type: medium
@@ -52,16 +74,12 @@ content:
     type: datetime_default
     region: content
   field_start_time:
-    weight: 103
+    weight: 3
     label: above
     settings:
       time_format: 'h:i a'
     third_party_settings: {  }
     type: time_formatter
     region: content
-  links:
-    weight: 100
-    settings: {  }
-    third_party_settings: {  }
-    region: content
-hidden: {  }
+hidden:
+  links: true
