--- a/web/sites/default/config/field.field.paragraph.council_agenda_item.field_time.yml
+++ b/web/sites/default/config/field.field.paragraph.council_agenda_item.field_time.yml
@@ -1,9 +1,9 @@
-uuid: 06c4fc99-1482-4dd5-b0c9-718b63916c84
+uuid: 3295ae53-26cb-49a8-b523-d94269106c79
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_time_certain_optional_
+    - field.storage.paragraph.field_time
     - paragraphs.paragraphs_type.council_agenda_item
   module:
     - custom_add_another
@@ -12,8 +12,8 @@ third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: paragraph.council_agenda_item.field_time_certain_optional_
-field_name: field_time_certain_optional_
+id: paragraph.council_agenda_item.field_time
+field_name: field_time
 entity_type: paragraph
 bundle: council_agenda_item
 label: 'Time certain (optional)'
