--- a/web/sites/default/config/field.storage.paragraph.field_council_document.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_council_document.yml
@@ -1,20 +1,21 @@
-uuid: b6e9f8f4-5976-4a78-b306-22bf2bf9f2aa
+uuid: 8bec80c4-b902-483f-9756-ce0e85e649e3
 langcode: en
 status: true
 dependencies:
   module:
     - field_permissions
+    - node
     - paragraphs
-    - time_field
 third_party_settings:
   field_permissions:
     permission_type: public
-id: paragraph.field_time_certain_optional_
-field_name: field_time_certain_optional_
+id: paragraph.field_council_document
+field_name: field_council_document
 entity_type: paragraph
-type: time
-settings: {  }
-module: time_field
+type: entity_reference
+settings:
+  target_type: node
+module: core
 locked: false
 cardinality: 1
 translatable: true
