POWR-826 add more fields and votes

--- a/web/sites/default/config/core.entity_form_display.paragraph.council_agenda_item.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.council_agenda_item.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.paragraph.council_agenda_item.field_agenda_item_type
     - field.field.paragraph.council_agenda_item.field_council_document
     - field.field.paragraph.council_agenda_item.field_time
+    - field.field.paragraph.council_agenda_item.field_time_requested
     - paragraphs.paragraphs_type.council_agenda_item
   module:
     - time_field
@@ -32,7 +33,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_council_document:
-    weight: 3
+    weight: 4
     settings:
       match_operator: CONTAINS
       size: 60
@@ -47,6 +48,14 @@ content:
       step: 5
     third_party_settings: {  }
     type: time_widget
+    region: content
+  field_time_requested:
+    weight: 3
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
 hidden:
   created: true
