--- a/web/sites/default/config/core.entity_view_display.node.council_document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.council_document.default.yml
@@ -4,12 +4,16 @@ status: true
 dependencies:
   config:
     - field.field.node.council_document.field_body_content
+    - field.field.node.council_document.field_bureau
+    - field.field.node.council_document.field_commissioner_votes
     - field.field.node.council_document.field_council_document_status
     - field.field.node.council_document.field_council_document_type
     - field.field.node.council_document.field_documents_and_exhibits
     - field.field.node.council_document.field_efiles_link
+    - field.field.node.council_document.field_introduced_by
     - node.type.council_document
   module:
+    - entity_reference_revisions
     - file
     - link
     - panelizer
@@ -27,11 +31,28 @@ bundle: council_document
 mode: default
 content:
   field_body_content:
-    weight: 2
+    weight: 4
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
+    region: content
+  field_bureau:
+    weight: 3
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_commissioner_votes:
+    type: entity_reference_revisions_entity_view
+    weight: 7
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
     region: content
   field_council_document_status:
     weight: 0
@@ -50,7 +71,7 @@ content:
     type: entity_reference_label
     region: content
   field_documents_and_exhibits:
-    weight: 3
+    weight: 5
     label: above
     settings:
       use_description_as_link_text: true
@@ -58,7 +79,7 @@ content:
     type: file_default
     region: content
   field_efiles_link:
-    weight: 4
+    weight: 6
     label: above
     settings:
       trim_length: 80
@@ -68,6 +89,14 @@ content:
       target: ''
     third_party_settings: {  }
     type: link
+    region: content
+  field_introduced_by:
+    weight: 2
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
 hidden:
   links: true
