--- a/web/sites/default/config/core.entity_view_display.node.council_meeting.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.council_meeting.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.council_meeting.field_agenda
     - field.field.node.council_meeting.field_agenda_type
     - field.field.node.council_meeting.field_council_meeting_status
     - field.field.node.council_meeting.field_notes
@@ -12,6 +13,7 @@ dependencies:
   module:
     - datetime
     - ds
+    - entity_reference_revisions
     - panelizer
     - text
     - time_field
@@ -27,6 +29,15 @@ targetEntityType: node
 bundle: council_meeting
 mode: default
 content:
+  field_agenda:
+    type: entity_reference_revisions_entity_view
+    weight: 5
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
   field_agenda_type:
     weight: 1
     label: above
