--- a/web/sites/default/config/core.entity_form_display.node.council_document.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.council_document.default.yml
@@ -4,15 +4,20 @@ status: true
 dependencies:
   config:
     - field.field.node.council_document.field_body_content
+    - field.field.node.council_document.field_bureau
+    - field.field.node.council_document.field_commissioner_votes
     - field.field.node.council_document.field_council_document_status
     - field.field.node.council_document.field_council_document_type
     - field.field.node.council_document.field_documents_and_exhibits
     - field.field.node.council_document.field_efiles_link
+    - field.field.node.council_document.field_introduced_by
     - node.type.council_document
   module:
+    - chosen_field
     - content_moderation
     - file
     - link
+    - paragraphs
     - path
     - text
 id: node.council_document.default
@@ -22,17 +27,42 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
   field_body_content:
-    weight: 3
+    weight: 5
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
+    region: content
+  field_bureau:
+    weight: 4
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
+  field_commissioner_votes:
+    type: paragraphs
+    weight: 8
+    settings:
+      title: Vote
+      title_plural: Votes
+      edit_mode: open
+      closed_mode: preview
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: button
+      form_display_mode: default
+      default_paragraph_type: votes
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+        add_above: add_above
+    third_party_settings: {  }
     region: content
   field_council_document_status:
     weight: 1
@@ -47,29 +77,35 @@ content:
     type: options_select
     region: content
   field_documents_and_exhibits:
-    weight: 5
+    weight: 7
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
     type: file_generic
     region: content
   field_efiles_link:
-    weight: 4
+    weight: 6
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
     region: content
+  field_introduced_by:
+    weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   moderation_state:
     type: moderation_state_default
-    weight: 10
+    weight: 13
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 8
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -77,7 +113,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 11
+    weight: 14
     region: content
     third_party_settings: {  }
   title:
@@ -90,7 +126,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 9
     settings:
       match_operator: CONTAINS
       size: 60
@@ -98,7 +134,7 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 9
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
