--- a/web/sites/default/config/core.entity_form_display.node.council_meeting.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.council_meeting.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.council_meeting.field_agenda
     - field.field.node.council_meeting.field_agenda_type
     - field.field.node.council_meeting.field_council_meeting_status
     - field.field.node.council_meeting.field_notes
@@ -12,6 +13,7 @@ dependencies:
   module:
     - content_moderation
     - datetime
+    - paragraphs
     - path
     - text
     - time_field
@@ -22,10 +24,29 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_agenda:
+    type: paragraphs
+    weight: 6
+    settings:
+      title: 'Agenda item'
+      title_plural: 'Agenda items'
+      edit_mode: open
+      closed_mode: preview
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: button
+      form_display_mode: default
+      default_paragraph_type: council_agenda_item
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+        add_above: add_above
+    third_party_settings: {  }
+    region: content
   field_agenda_type:
     weight: 2
     settings: {  }
@@ -62,19 +83,19 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 10
+    weight: 11
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 8
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 11
+    weight: 12
     region: content
     settings:
       display_label: true
@@ -89,7 +110,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 7
     settings:
       match_operator: CONTAINS
       size: 60
@@ -97,7 +118,7 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 9
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
