--- a/web/sites/default/config/core.entity_view_display.paragraph.council_agenda_item.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.council_agenda_item.default.yml
@@ -7,8 +7,10 @@ dependencies:
     - field.field.paragraph.council_agenda_item.field_agenda_item_type
     - field.field.paragraph.council_agenda_item.field_council_document
     - field.field.paragraph.council_agenda_item.field_time
+    - field.field.paragraph.council_agenda_item.field_time_requested
     - paragraphs.paragraphs_type.council_agenda_item
   module:
+    - ds
     - time_field
 id: paragraph.council_agenda_item.default
 targetEntityType: paragraph
@@ -16,8 +18,8 @@ bundle: council_agenda_item
 mode: default
 content:
   field_agenda_item_number:
-    weight: 0
-    label: above
+    weight: 1
+    label: visually_hidden
     settings:
       thousand_separator: ''
       prefix_suffix: true
@@ -25,27 +27,49 @@ content:
     type: number_integer
     region: content
   field_agenda_item_type:
-    weight: 3
-    label: above
+    weight: 0
+    label: hidden
     settings:
-      link: true
-    third_party_settings: {  }
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: entity_reference_label
     region: content
   field_council_document:
-    weight: 2
-    label: above
+    weight: 3
+    label: hidden
     settings:
       link: true
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: entity_reference_label
     region: content
   field_time:
-    weight: 1
-    label: above
+    weight: 2
+    label: inline
     settings:
       time_format: 'h:i a'
     third_party_settings: {  }
     type: time_formatter
+    region: content
+  field_time_requested:
+    weight: 4
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
 hidden: {  }
