POWR-826 create clerk role and permissions; POWR-1034 fix sitewide editor perms

--- a/web/sites/default/config/user.role.code_editor.yml
+++ b/web/sites/default/config/user.role.code_editor.yml
@@ -27,6 +27,9 @@ permissions:
   - 'delete charter_article revisions'
   - 'delete charter_chapter revisions'
   - 'delete charter_section revisions'
+  - 'delete code_chapter revisions'
+  - 'delete code_section revisions'
+  - 'delete code_title revisions'
   - 'delete own charter_article content'
   - 'delete own charter_chapter content'
   - 'delete own charter_section content'
