--- a/web/sites/default/config/user.role.sitewide_editor.yml
+++ b/web/sites/default/config/user.role.sitewide_editor.yml
@@ -24,7 +24,15 @@ permissions:
   - 'edit any alert content'
   - 'edit any audio_file media'
   - 'edit any building content'
+  - 'edit any charter_article content'
+  - 'edit any charter_chapter content'
+  - 'edit any charter_section content'
   - 'edit any city_service content'
+  - 'edit any code_chapter content'
+  - 'edit any code_section content'
+  - 'edit any code_title content'
+  - 'edit any council_document content'
+  - 'edit any council_meeting content'
   - 'edit any development_permit content'
   - 'edit any document media'
   - 'edit any event content'
@@ -43,7 +51,15 @@ permissions:
   - 'edit field_shortname_or_acronym'
   - 'edit own alert content'
   - 'edit own building content'
+  - 'edit own charter_article content'
+  - 'edit own charter_chapter content'
+  - 'edit own charter_section content'
   - 'edit own city_service content'
+  - 'edit own code_chapter content'
+  - 'edit own code_section content'
+  - 'edit own code_title content'
+  - 'edit own council_document content'
+  - 'edit own council_meeting content'
   - 'edit own development_permit content'
   - 'edit own event content'
   - 'edit own field_menu_link'
@@ -98,4 +114,5 @@ permissions:
   - 'view own field_menu_link'
   - 'view own field_popular'
   - 'view own field_search_keywords'
+  - 'view page revisions'
   - 'view service_location revisions'
