--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -12,6 +12,8 @@ dependencies:
     - node.type.code_chapter
     - node.type.code_section
     - node.type.code_title
+    - node.type.council_document
+    - node.type.council_meeting
     - node.type.development_permit
     - node.type.event
     - node.type.news
@@ -99,6 +101,8 @@ type_settings:
       - code_chapter
       - code_section
       - code_title
+      - council_document
+      - council_meeting
       - development_permit
       - event
       - news
