--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -77,6 +77,7 @@ permissions:
   - 'view own field_popular'
   - 'view own field_shortname_or_acronym'
   - 'view own unpublished content'
+  - 'view page revisions'
   - 'view search api pages'
   - 'view the administration theme'
   - 'view unpublished paragraphs'
