POWR-990 Initial stab at configuring group home pages to have Featured Content and Featured Groups fields, and updated the Featured display on all affected bundles.

--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -15,6 +15,8 @@ dependencies:
     - field.field.group.bureau_office.field_enable_programs_menu_item
     - field.field.group.bureau_office.field_enable_projects_menu_item
     - field.field.group.bureau_office.field_enable_services_and_inform
+    - field.field.group.bureau_office.field_featured_content
+    - field.field.group.bureau_office.field_featured_groups
     - field.field.group.bureau_office.field_featured_media
     - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
@@ -42,11 +44,47 @@ third_party_settings:
         - field_featured_media
         - field_summary
         - group_site_menu_entity_view_1
+        - field_featured_content
+        - field_featured_groups
 id: group.bureau_office.default
 targetEntityType: group
 bundle: bureau_office
 mode: default
 content:
+  field_featured_content:
+    weight: 3
+    label: above
+    settings:
+      view_mode: featured
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: Featured
+            lb-col: false
+            classes: {  }
+    type: entity_reference_entity_view
+    region: content
+  field_featured_groups:
+    weight: 4
+    label: above
+    settings:
+      view_mode: featured
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: 'Programs and projects'
+            lb-col: false
+            classes: {  }
+    type: entity_reference_entity_view
+    region: content
   field_featured_media:
     type: entity_reference_entity_view
     weight: 0
@@ -62,14 +100,6 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
-    region: content
-  field_search_keywords:
-    weight: 3
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
     region: content
   field_summary:
     type: string
@@ -133,6 +163,7 @@ hidden:
   field_official_organization_name: true
   field_parent_group: true
   field_phone: true
+  field_search_keywords: true
   field_shortname_or_acronym: true
   field_topics: true
   label: true
