--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -16,6 +16,8 @@ dependencies:
     - field.field.group.bureau_office.field_enable_programs_menu_item
     - field.field.group.bureau_office.field_enable_projects_menu_item
     - field.field.group.bureau_office.field_enable_services_and_inform
+    - field.field.group.bureau_office.field_featured_content
+    - field.field.group.bureau_office.field_featured_groups
     - field.field.group.bureau_office.field_featured_media
     - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
@@ -166,6 +168,24 @@ content:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
+    region: content
+  field_featured_content:
+    weight: 34
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
+  field_featured_groups:
+    weight: 35
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
     region: content
   field_featured_media:
     type: entity_browser_entity_reference
