--- a/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
@@ -12,6 +12,8 @@ dependencies:
     - field.field.group.elected_official.field_enable_news_and_notices_me
     - field.field.group.elected_official.field_enable_offices_and_program
     - field.field.group.elected_official.field_enable_projects_menu_item
+    - field.field.group.elected_official.field_featured_content
+    - field.field.group.elected_official.field_featured_groups
     - field.field.group.elected_official.field_legacy_path
     - field.field.group.elected_official.field_logo
     - field.field.group.elected_official.field_menu_link
@@ -23,7 +25,6 @@ dependencies:
     - group.type.elected_official
   module:
     - ds
-    - menu_link
 third_party_settings:
   ds:
     layout:
@@ -42,14 +43,6 @@ targetEntityType: group
 bundle: elected_official
 mode: default
 content:
-  field_menu_link:
-    weight: 3
-    label: above
-    settings:
-      link_to_target: true
-    third_party_settings: {  }
-    type: menu_link
-    region: content
   field_official_title:
     type: string
     weight: 0
@@ -86,14 +79,6 @@ content:
             fis: false
             fis-def-at: false
             fi-def-at: false
-  field_search_keywords:
-    weight: 4
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_summary:
     weight: 1
     label: hidden
@@ -147,9 +132,13 @@ hidden:
   field_enable_news_and_notices_me: true
   field_enable_offices_and_program: true
   field_enable_projects_menu_item: true
+  field_featured_content: true
+  field_featured_groups: true
   field_legacy_path: true
   field_logo: true
+  field_menu_link: true
   field_phone: true
+  field_search_keywords: true
   field_shortname_or_acronym: true
   label: true
   uid: true
