--- a/web/sites/default/config/core.entity_view_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.default.yml
@@ -14,6 +14,8 @@ dependencies:
     - field.field.group.program.field_enable_programs_menu_item
     - field.field.group.program.field_enable_projects_menu_item
     - field.field.group.program.field_enable_services_and_inform
+    - field.field.group.program.field_featured_content
+    - field.field.group.program.field_featured_groups
     - field.field.group.program.field_featured_media
     - field.field.group.program.field_legacy_path
     - field.field.group.program.field_logo
@@ -40,11 +42,47 @@ third_party_settings:
         - field_featured_media
         - field_summary
         - group_site_menu_entity_view_1
+        - field_featured_content
+        - field_featured_groups
 id: group.program.default
 targetEntityType: group
 bundle: program
 mode: default
 content:
+  field_featured_content:
+    weight: 3
+    label: above
+    settings:
+      view_mode: featured
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: Featured
+            lb-col: false
+            classes: {  }
+    type: entity_reference_entity_view
+    region: content
+  field_featured_groups:
+    type: entity_reference_entity_view
+    weight: 4
+    region: content
+    label: above
+    settings:
+      view_mode: featured
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: 'Programs and projects'
+            lb-col: false
+            classes: {  }
   field_featured_media:
     weight: 0
     label: hidden
@@ -60,14 +98,6 @@ content:
             lb-col: false
             classes: {  }
     type: entity_reference_entity_view
-    region: content
-  field_search_keywords:
-    weight: 3
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
     region: content
   field_summary:
     weight: 1
@@ -129,6 +159,7 @@ hidden:
   field_menu_link: true
   field_parent_group: true
   field_phone: true
+  field_search_keywords: true
   field_shortname_or_acronym: true
   field_topics: true
   label: true
