POWR-971 Fix duplicated emails for group node

--- a/web/sites/default/config/rules.reaction.send_email_to_reviewer_after_creating_new_content.yml
+++ b/web/sites/default/config/rules.reaction.send_email_to_reviewer_after_creating_new_content.yml
@@ -30,13 +30,13 @@ expression:
         negate: false
       -
         id: rules_condition
-        uuid: 5e4247d9-89b5-417c-b007-a20c61d934c3
+        uuid: 224fd1e1-885d-4de4-9a31-99d8c1ddca57
         context_values: {  }
         context_mapping:
-          entity: node
+          node: node
         context_processors: {  }
         provides_mapping: {  }
-        condition_id: rules_entity_is_new
+        condition_id: portland_not_in_group
         negate: false
   actions:
     id: rules_action_set
