POWR-983 Refactor related card date and time markup

--- a/web/sites/default/config/core.entity_view_display.node.event.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.related.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.node.event.field_legacy_path
     - field.field.node.event.field_related_content
     - field.field.node.event.field_reviewer
+    - field.field.node.event.field_search_keywords
     - field.field.node.event.field_start_date
     - field.field.node.event.field_start_time
     - field.field.node.event.field_summary
@@ -51,10 +52,11 @@ third_party_settings:
       first:
         - node_title
         - field_start_date
-        - group_date_and_time
+        - group_meta
         - field_end_date
-        - group_start_to_end_time
+        - group_date_and_time
         - field_all_day
+        - group_start_to_end_time
         - field_start_time
         - field_end_time
     fields:
@@ -78,8 +80,8 @@ third_party_settings:
       children:
         - field_start_date
         - field_end_date
-      parent_name: ''
-      weight: 1
+      parent_name: group_meta
+      weight: 2
       format_type: html_element
       format_settings:
         label: 'Start to end date'
@@ -90,7 +92,7 @@ third_party_settings:
         effect: none
         speed: fast
         id: ''
-        classes: 'event--date h4'
+        classes: 'event--date d-flex flex-wrap align-items-center'
       label: 'Start to end date'
       region: hidden
     group_start_to_end_time:
@@ -98,8 +100,8 @@ third_party_settings:
         - field_all_day
         - field_start_time
         - field_end_time
-      parent_name: ''
-      weight: 2
+      parent_name: group_meta
+      weight: 3
       format_type: html_element
       format_settings:
         label: 'Start to end time'
@@ -110,8 +112,26 @@ third_party_settings:
         effect: none
         speed: fast
         id: ''
-        classes: 'event--time h4 mb-4'
+        classes: 'event--time d-flex align-items-center'
       label: 'Start to end time'
+      region: hidden
+    group_meta:
+      children:
+        - group_date_and_time
+        - group_start_to_end_time
+      parent_name: ''
+      weight: 1
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: ''
+        element: div
+        show_label: false
+        label_element: h3
+        attributes: ''
+        effect: none
+        speed: fast
+      label: Meta
       region: hidden
 id: node.event.related
 targetEntityType: node
@@ -133,7 +153,7 @@ content:
           id: expert
           settings:
             lb: ''
-            prefix: '<i class="fas fa-clock"></i> '
+            prefix: ''
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
@@ -145,7 +165,7 @@ content:
             fis-at: ''
             fi: true
             fi-el: span
-            fi-cl: all-day
+            fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
@@ -241,7 +261,7 @@ content:
           id: expert
           settings:
             lb: ''
-            prefix: '<i class="fas fa-calendar"></i>'
+            prefix: ''
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
@@ -253,7 +273,7 @@ content:
             fis-at: ''
             fi: true
             fi-el: span
-            fi-cl: 'event--start-date pl-2'
+            fi-cl: event--start-date
             fi-at: ''
             suffix: ''
             lbw: false
@@ -311,5 +331,6 @@ hidden:
   field_legacy_path: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_summary: true
   links: true
