POWR-990 Made title a link in Page featured display

--- a/web/sites/default/config/core.entity_view_display.node.page.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.featured.yml
@@ -46,6 +46,16 @@ third_party_settings:
         weight: 2
         label: hidden
         formatter: default
+        settings:
+          link: true
+          wrapper: h2
+          class: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 id: node.page.featured
 targetEntityType: node
 bundle: page
