POWR-826 'install' a bunch of terms

--- a/web/sites/default/config/core.entity_form_display.node.council_document.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.council_document.default.yml
@@ -95,7 +95,7 @@ content:
     weight: 3
     settings: {  }
     third_party_settings: {  }
-    type: options_select
+    type: chosen_select
     region: content
   moderation_state:
     type: moderation_state_default
