--- a/web/sites/default/config/taxonomy.vocabulary.council_meeting_status.yml
+++ b/web/sites/default/config/taxonomy.vocabulary.council_meeting_status.yml
@@ -4,6 +4,6 @@ status: true
 dependencies: {  }
 name: 'Council meeting status'
 vid: council_meeting_status
-description: ''
+description: 'Allows clerk to set meeting as proposed, confirmed, cancelled, or adjorned'
 hierarchy: 0
 weight: 0
