--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -197,3 +197,4 @@ portland_migrations: 0.0.0
 search_api_logger: 1.3.0
 search_api_spellcheck: 0.0.0
 search_api_autocomplete: 1.2.0
+portland_taxonomy_create: 0.1.0
