POWR-926 clean up a couple of form display fields

--- a/web/sites/default/config/core.entity_form_display.paragraph.council_agenda_item.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.council_agenda_item.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.paragraph.council_agenda_item.field_time_requested
     - paragraphs.paragraphs_type.council_agenda_item
   module:
+    - chosen_field
     - time_field
 id: paragraph.council_agenda_item.default
 targetEntityType: paragraph
@@ -25,21 +26,15 @@ content:
     region: content
   field_agenda_item_type:
     weight: 0
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_select
     region: content
   field_council_document:
     weight: 4
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: chosen_select
     region: content
   field_time:
     weight: 2
