POWR-990 Don't display group in featured content or featured groups

--- a/web/sites/default/config/core.entity_view_display.node.development_permit.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.featured.yml
@@ -39,13 +39,12 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - field_group
         - node_title
         - field_summary
     fields:
       node_title:
         plugin_id: node_title
-        weight: 1
+        weight: 0
         label: hidden
         formatter: default
         settings:
@@ -63,17 +62,9 @@ targetEntityType: node
 bundle: development_permit
 mode: featured
 content:
-  field_group:
-    type: entity_reference_label
-    weight: 0
-    region: content
-    label: hidden
-    settings:
-      link: true
-    third_party_settings: {  }
   field_summary:
     type: string
-    weight: 2
+    weight: 1
     region: content
     label: hidden
     settings:
@@ -83,6 +74,7 @@ hidden:
   content_moderation_control: true
   field_body_content: true
   field_community_actions: true
+  field_group: true
   field_legacy_path: true
   field_online_application_link: true
   field_permit_type: true
