--- a/web/sites/default/config/core.entity_view_display.node.city_service.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.featured.yml
@@ -36,13 +36,12 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - field_group
         - node_title
         - field_summary
     fields:
       node_title:
         plugin_id: node_title
-        weight: 1
+        weight: 0
         label: hidden
         formatter: default
         settings:
@@ -60,16 +59,8 @@ targetEntityType: node
 bundle: city_service
 mode: featured
 content:
-  field_group:
-    type: entity_reference_label
-    weight: 0
-    region: content
-    label: hidden
-    settings:
-      link: true
-    third_party_settings: {  }
   field_summary:
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
@@ -108,6 +99,7 @@ hidden:
   content_moderation_control: true
   field_audience: true
   field_community_actions: true
+  field_group: true
   field_legacy_path: true
   field_popular: true
   field_related_content: true
