--- a/web/sites/default/config/core.entity_view_display.node.page.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.featured.yml
@@ -37,13 +37,12 @@ third_party_settings:
     regions:
       content:
         - field_featured_media
-        - field_group
         - node_title
         - field_summary
     fields:
       node_title:
         plugin_id: node_title
-        weight: 2
+        weight: 1
         label: hidden
         formatter: default
         settings:
@@ -77,17 +76,9 @@ content:
             classes: {  }
     type: entity_reference_entity_view
     region: content
-  field_group:
-    type: entity_reference_label
-    weight: 1
-    region: content
-    label: hidden
-    settings:
-      link: true
-    third_party_settings: {  }
   field_summary:
     type: string
-    weight: 3
+    weight: 2
     region: content
     label: hidden
     settings:
@@ -97,6 +88,7 @@ hidden:
   content_moderation_control: true
   field_audience: true
   field_body_content: true
+  field_group: true
   field_legacy_path: true
   field_page_type: true
   field_popular: true
