--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -17,6 +17,7 @@ dependencies:
     - node.type.news
     - node.type.notification
     - node.type.page
+    - node.type.policy
     - node.type.service_location
   module:
     - content_moderation
@@ -104,5 +105,6 @@ type_settings:
       - news
       - notification
       - page
+      - policy
       - service_location
   default_moderation_state: draft
