POWR-990 incremental commit so I can switch stories

--- a/web/sites/default/config/core.entity_view_display.node.page.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.featured.yml
@@ -29,25 +29,34 @@ third_party_settings:
     default: default
   ds:
     layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
+      id: cloudy_card--small
+      library: null
       disable_css: false
       entity_classes: all_classes
-      settings: {  }
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
     regions:
-      content:
-        - field_featured_media
+      first:
         - node_title
-        - field_summary
+      second:
+        - field_featured_media
     fields:
       node_title:
         plugin_id: node_title
-        weight: 1
+        weight: 0
         label: hidden
         formatter: default
         settings:
           link: true
-          wrapper: h2
+          wrapper: h3
           class: ''
         ft:
           id: default
@@ -61,10 +70,10 @@ bundle: page
 mode: featured
 content:
   field_featured_media:
-    weight: 0
+    weight: 1
     label: hidden
     settings:
-      view_mode: banner
+      view_mode: featured
       link: false
     third_party_settings:
       ds:
@@ -75,15 +84,7 @@ content:
             lb-col: false
             classes: {  }
     type: entity_reference_entity_view
-    region: content
-  field_summary:
-    type: string
-    weight: 2
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
+    region: second
 hidden:
   content_moderation_control: true
   field_audience: true
@@ -95,5 +96,6 @@ hidden:
   field_related_content: true
   field_reviewer: true
   field_search_keywords: true
+  field_summary: true
   field_topics: true
   links: true
