POWR-1017 updated sitewide events view to also search text in title

--- a/web/sites/default/config/views.view.events_index.yml
+++ b/web/sites/default/config/views.view.events_index.yml
@@ -236,6 +236,7 @@ display:
           parse_mode: terms
           min_length: null
           fields:
+            - content_title
             - rendered_item
           plugin_id: search_api_fulltext
         field_start_date_1:
