POWR-826 Update URL alias pattern for Policy

--- a/web/sites/default/config/easy_breadcrumb.settings.yml
+++ b/web/sites/default/config/easy_breadcrumb.settings.yml
@@ -15,3 +15,4 @@ replaced_titles: ''
 segments_separator: null
 title_segment_as_link: false
 title_from_page_when_available: true
+term_hierarchy: false
