--- a/web/sites/default/config/pathauto.pattern.policy_category.yml
+++ b/web/sites/default/config/pathauto.pattern.policy_category.yml
@@ -1,24 +1,23 @@
-uuid: fb784bbf-6b46-4dd8-a3fa-3103243185cc
+uuid: 73256da0-9630-4a5d-8a77-43691a8d4b91
 langcode: en
 status: true
 dependencies:
   module:
     - ctools
     - taxonomy
-id: project_status_and_type
-label: 'Project Status and Type'
+id: policy_category
+label: 'Policy category'
 type: 'canonical_entities:taxonomy_term'
-pattern: 'projects/[term:name]'
+pattern: 'policy/[term:name]'
 selection_criteria:
-  9a6c1e8a-1983-4087-bd1d-cfbafb7f8a0f:
+  e9c88d5a-7104-4bb8-87cf-bcc2f15a9c3e:
     id: 'entity_bundle:taxonomy_term'
     bundles:
-      project_status: project_status
-      project_type: project_type
+      policy_category: policy_category
     negate: false
     context_mapping:
       taxonomy_term: taxonomy_term
-    uuid: 9a6c1e8a-1983-4087-bd1d-cfbafb7f8a0f
+    uuid: e9c88d5a-7104-4bb8-87cf-bcc2f15a9c3e
 selection_logic: and
-weight: 3
+weight: -3
 relationships: {  }
