--- a/web/sites/default/config/pathauto.pattern.policy_sub_category.yml
+++ b/web/sites/default/config/pathauto.pattern.policy_sub_category.yml
@@ -1,24 +1,23 @@
-uuid: fb784bbf-6b46-4dd8-a3fa-3103243185cc
+uuid: e2bd0097-14ed-413e-b095-33fe5896d4e1
 langcode: en
 status: true
 dependencies:
   module:
     - ctools
     - taxonomy
-id: project_status_and_type
-label: 'Project Status and Type'
+id: policy_sub_category
+label: 'Policy sub-category'
 type: 'canonical_entities:taxonomy_term'
-pattern: 'projects/[term:name]'
+pattern: 'policy/[term:parent:name]/[term:name]'
 selection_criteria:
-  9a6c1e8a-1983-4087-bd1d-cfbafb7f8a0f:
+  732e5196-af90-4bd1-98c0-393d7f27bac8:
     id: 'entity_bundle:taxonomy_term'
     bundles:
-      project_status: project_status
-      project_type: project_type
+      policy_category: policy_category
     negate: false
     context_mapping:
       taxonomy_term: taxonomy_term
-    uuid: 9a6c1e8a-1983-4087-bd1d-cfbafb7f8a0f
+    uuid: 732e5196-af90-4bd1-98c0-393d7f27bac8
 selection_logic: and
-weight: 3
+weight: -4
 relationships: {  }
