POWR-990 Configured featured fields to use card small layout, updated templates to support the layouts.

--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -42,6 +42,7 @@ third_party_settings:
         - field_summary
         - group_site_menu_entity_view_1
         - field_featured_content
+        - group_card_wrapper
         - field_featured_groups
         - field_start_date
         - field_end_date
@@ -124,7 +125,7 @@ content:
     type: entity_reference_entity_view
     region: content
   field_featured_groups:
-    weight: 5
+    weight: 6
     label: above
     settings:
       view_mode: featured
