--- a/web/sites/default/config/core.entity_view_display.node.development_permit.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.featured.yml
@@ -32,15 +32,23 @@ third_party_settings:
     default: default
   ds:
     layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
+      id: cloudy_card--small
+      library: null
       disable_css: false
       entity_classes: all_classes
-      settings: {  }
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
     regions:
-      content:
+      first:
         - node_title
-        - field_summary
     fields:
       node_title:
         plugin_id: node_title
@@ -49,7 +57,7 @@ third_party_settings:
         formatter: default
         settings:
           link: true
-          wrapper: h2
+          wrapper: h3
           class: ''
         ft:
           id: default
@@ -61,15 +69,7 @@ id: node.development_permit.featured
 targetEntityType: node
 bundle: development_permit
 mode: featured
-content:
-  field_summary:
-    type: string
-    weight: 1
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
+content: {  }
 hidden:
   content_moderation_control: true
   field_body_content: true
@@ -85,5 +85,6 @@ hidden:
   field_reviewer: true
   field_search_keywords: true
   field_service_location: true
+  field_summary: true
   field_topics: true
   links: true
