--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -45,6 +45,7 @@ third_party_settings:
         - field_summary
         - group_site_menu_entity_view_1
         - field_featured_content
+        - group_featured_content
         - field_featured_groups
 id: group.bureau_office.default
 targetEntityType: group
@@ -69,7 +70,7 @@ content:
     type: entity_reference_entity_view
     region: content
   field_featured_groups:
-    weight: 4
+    weight: 5
     label: above
     settings:
       view_mode: featured
