--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.featured.yml
@@ -35,16 +35,25 @@ dependencies:
 third_party_settings:
   ds:
     layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
+      id: cloudy_card--small
+      library: null
       disable_css: false
       entity_classes: all_classes
-      settings: {  }
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
     regions:
-      content:
-        - field_featured_media
+      first:
         - label
-        - field_summary
+      second:
+        - field_featured_media
 id: group.bureau_office.featured
 targetEntityType: group
 bundle: bureau_office
@@ -52,10 +61,10 @@ mode: featured
 content:
   field_featured_media:
     type: entity_reference_entity_view
-    weight: 0
+    weight: 1
     label: hidden
     settings:
-      view_mode: banner
+      view_mode: featured
       link: false
     third_party_settings:
       ds:
@@ -65,47 +74,11 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
-    region: content
-  field_summary:
-    type: string
-    weight: 2
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings:
-      ds:
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi: true
-            fi-el: p
-            fi-cl: lead
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi-def-at: false
+    region: second
   label:
     type: string
-    weight: 1
-    region: content
+    weight: 0
+    region: first
     label: hidden
     settings:
       link_to_entity: true
@@ -142,6 +115,7 @@ hidden:
   field_phone: true
   field_search_keywords: true
   field_shortname_or_acronym: true
+  field_summary: true
   field_topics: true
   group_site_menu_entity_view_1: true
   uid: true
